--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+    position: relative;
+}
+
+ul.nav-pills {
+    top: 20px;
+    position: fixed;
+}
+
+div.col-8 div {
+    height: 500px;
 }
